--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -14,20 +14,20 @@ backend = "glx";
 #
 #################################
 
-glx-no-stencil = true;
+#glx-no-stencil = true;
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
 # My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
 # but a 20% increase when only 1/4 is.
 # My tests on nouveau show terrible slowdown.
 # Useful with --glx-swap-method, as well.
-glx-copy-from-front = false;
+#glx-copy-from-front = false;
 
 # GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
 # May break VSync and is not available on some drivers.
 # Overrides --glx-copy-from-front.
-glx-use-copysubbuffermesa = true;
+#glx-use-copysubbuffermesa = true;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
@@ -54,7 +54,7 @@ glx-use-copysubbuffermesa = true;
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = true;
+#shadow = true;
 # Don't draw shadows on DND windows.
 #no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
@@ -62,13 +62,13 @@ shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 #clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 12;
+#shadow-radius = 12;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -15;
+#shadow-offset-x = -15;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -15;
+#shadow-offset-y = -15;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.65;
+#shadow-opacity = 0.65;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -78,30 +78,30 @@ shadow-opacity = 0.65;
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-shadow-exclude = [
-    "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "name *= 'Firefox'",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "n:w:*VirtualBox*",
-    "_GTK_FRAME_EXTENTS@:c"
-];
+#shadow-exclude = [
+#    "! name~=''",
+#    "name = 'Notification'",
+#    "name = 'Plank'",
+#    "name = 'Docky'",
+#    "name = 'Kupfer'",
+#    "name = 'xfce4-notifyd'",
+#    "name *= 'VLC'",
+#    "name *= 'compton'",
+#    "name *= 'Chromium'",
+#    "name *= 'Chrome'",
+#    "name *= 'Firefox'",
+#    "class_g = 'Conky'",
+#    "class_g = 'Kupfer'",
+#    "class_g = 'Synapse'",
+#    "class_g ?= 'Notify-osd'",
+#    "class_g ?= 'Cairo-dock'",
+#    "class_g ?= 'Xfce4-notifyd'",
+#    "class_g ?= 'Xfce4-power-manager'",
+#    "n:w:*VirtualBox*",
+#    "_GTK_FRAME_EXTENTS@:c"
+#];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
+#shadow-ignore-shaped = false;
 
 #################################
 #
@@ -110,10 +110,10 @@ shadow-ignore-shaped = false;
 #################################
 
 #menu-opacity = 1;
-inactive-opacity = 1;
-active-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = false;
+#inactive-opacity = 1;
+#active-opacity = 1;
+#frame-opacity = 1;
+#inactive-opacity-override = false;
 #alpha-step = 0.06;
 
 # Dim inactive windows. (0.0 - 1.0)
@@ -121,15 +121,15 @@ inactive-opacity-override = false;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-blur-background = true;
+#blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-blur-background-frame = true;
+#blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 # blur-background-fixed = false;
-blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
-];
+#blur-background-exclude = [
+#    "window_type = 'dock'",
+#    "window_type = 'desktop'"
+#];
 
 # blur-kern = "3x3box"
 # blur-kern = "5x5box"
@@ -145,7 +145,7 @@ blur-background-exclude = [
 # blur-kern = "11x11gaussian"
 
 # 13x sigma=2
-blur-kern = "13,13,0.000123,0.000488,0.001503,0.003607,0.006738,0.009804,0.011109,0.009804,0.006738,0.003607,0.001503,0.000488,0.000123,0.000488,0.00193,0.005946,0.014264,0.026649,0.038774,0.043937,0.038774,0.026649,0.014264,0.005946,0.00193,0.000488,0.001503,0.005946,0.018316,0.043937,0.082085,0.119433,0.135335,0.119433,0.082085,0.043937,0.018316,0.005946,0.001503,0.003607,0.014264,0.043937,0.105399,0.196912,0.286505,0.324652,0.286505,0.196912,0.105399,0.043937,0.014264,0.003607,0.006738,0.026649,0.082085,0.196912,0.367879,0.535261,0.606531,0.535261,0.367879,0.196912,0.082085,0.026649,0.006738,0.009804,0.038774,0.119433,0.286505,0.535261,0.778801,0.882497,0.778801,0.535261,0.286505,0.119433,0.038774,0.009804,0.011109,0.043937,0.135335,0.324652,0.606531,0.882497,0.882497,0.606531,0.324652,0.135335,0.043937,0.011109,0.009804,0.038774,0.119433,0.286505,0.535261,0.778801,0.882497,0.778801,0.535261,0.286505,0.119433,0.038774,0.009804,0.006738,0.026649,0.082085,0.196912,0.367879,0.535261,0.606531,0.535261,0.367879,0.196912,0.082085,0.026649,0.006738,0.003607,0.014264,0.043937,0.105399,0.196912,0.286505,0.324652,0.286505,0.196912,0.105399,0.043937,0.014264,0.003607,0.001503,0.005946,0.018316,0.043937,0.082085,0.119433,0.135335,0.119433,0.082085,0.043937,0.018316,0.005946,0.001503,0.000488,0.00193,0.005946,0.014264,0.026649,0.038774,0.043937,0.038774,0.026649,0.014264,0.005946,0.00193,0.000488,0.000123,0.000488,0.001503,0.003607,0.006738,0.009804,0.011109,0.009804,0.006738,0.003607,0.001503,0.000488,0.000123"
+#blur-kern = "13,13,0.000123,0.000488,0.001503,0.003607,0.006738,0.009804,0.011109,0.009804,0.006738,0.003607,0.001503,0.000488,0.000123,0.000488,0.00193,0.005946,0.014264,0.026649,0.038774,0.043937,0.038774,0.026649,0.014264,0.005946,0.00193,0.000488,0.001503,0.005946,0.018316,0.043937,0.082085,0.119433,0.135335,0.119433,0.082085,0.043937,0.018316,0.005946,0.001503,0.003607,0.014264,0.043937,0.105399,0.196912,0.286505,0.324652,0.286505,0.196912,0.105399,0.043937,0.014264,0.003607,0.006738,0.026649,0.082085,0.196912,0.367879,0.535261,0.606531,0.535261,0.367879,0.196912,0.082085,0.026649,0.006738,0.009804,0.038774,0.119433,0.286505,0.535261,0.778801,0.882497,0.778801,0.535261,0.286505,0.119433,0.038774,0.009804,0.011109,0.043937,0.135335,0.324652,0.606531,0.882497,0.882497,0.606531,0.324652,0.135335,0.043937,0.011109,0.009804,0.038774,0.119433,0.286505,0.535261,0.778801,0.882497,0.778801,0.535261,0.286505,0.119433,0.038774,0.009804,0.006738,0.026649,0.082085,0.196912,0.367879,0.535261,0.606531,0.535261,0.367879,0.196912,0.082085,0.026649,0.006738,0.003607,0.014264,0.043937,0.105399,0.196912,0.286505,0.324652,0.286505,0.196912,0.105399,0.043937,0.014264,0.003607,0.001503,0.005946,0.018316,0.043937,0.082085,0.119433,0.135335,0.119433,0.082085,0.043937,0.018316,0.005946,0.001503,0.000488,0.00193,0.005946,0.014264,0.026649,0.038774,0.043937,0.038774,0.026649,0.014264,0.005946,0.00193,0.000488,0.000123,0.000488,0.001503,0.003607,0.006738,0.009804,0.011109,0.009804,0.006738,0.003607,0.001503,0.000488,0.000123"
 
 # blur-kern = "15,15,0.140858,0.182684,0.227638,0.272532,0.313486,0.346456,0.367879,0.375311,0.367879,0.346456,0.313486,0.272532,0.227638,0.182684,0.140858,0.182684,0.236928,0.295230,0.353455,0.406570,0.449329,0.477114,0.486752,0.477114,0.449329,0.406570,0.353455,0.295230,0.236928,0.182684,0.227638,0.295230,0.367879,0.440432,0.506617,0.559898,0.594521,0.606531,0.594521,0.559898,0.506617,0.440432,0.367879,0.295230,0.227638,0.272532,0.353455,0.440432,0.527292,0.606531,0.670320,0.711770,0.726149,0.711770,0.670320,0.606531,0.527292,0.440432,0.353455,0.272532,0.313486,0.406570,0.506617,0.606531,0.697676,0.771052,0.818731,0.835270,0.818731,0.771052,0.697676,0.606531,0.506617,0.406570,0.313486,0.346456,0.449329,0.559898,0.670320,0.771052,0.852144,0.904837,0.923116,0.904837,0.852144,0.771052,0.670320,0.559898,0.449329,0.346456,0.367879,0.477114,0.594521,0.711770,0.818731,0.904837,0.960789,0.980199,0.960789,0.904837,0.818731,0.711770,0.594521,0.477114,0.367879,0.375311,0.486752,0.606531,0.726149,0.835270,0.923116,0.980199,0.980199,0.923116,0.835270,0.726149,0.606531,0.486752,0.375311,0.367879,0.477114,0.594521,0.711770,0.818731,0.904837,0.960789,0.980199,0.960789,0.904837,0.818731,0.711770,0.594521,0.477114,0.367879,0.346456,0.449329,0.559898,0.670320,0.771052,0.852144,0.904837,0.923116,0.904837,0.852144,0.771052,0.670320,0.559898,0.449329,0.346456,0.313486,0.406570,0.506617,0.606531,0.697676,0.771052,0.818731,0.835270,0.818731,0.771052,0.697676,0.606531,0.506617,0.406570,0.313486,0.272532,0.353455,0.440432,0.527292,0.606531,0.670320,0.711770,0.726149,0.711770,0.670320,0.606531,0.527292,0.440432,0.353455,0.272532,0.227638,0.295230,0.367879,0.440432,0.506617,0.559898,0.594521,0.606531,0.594521,0.559898,0.506617,0.440432,0.367879,0.295230,0.227638,0.182684,0.236928,0.295230,0.353455,0.406570,0.449329,0.477114,0.486752,0.477114,0.449329,0.406570,0.353455,0.295230,0.236928,0.182684,0.140858,0.182684,0.227638,0.272532,0.313486,0.346456,0.367879,0.375311,0.367879,0.346456,0.313486,0.272532,0.227638,0.182684,0.140858"
 
@@ -156,18 +156,18 @@ blur-kern = "13,13,0.000123,0.000488,0.001503,0.003607,0.006738,0.009804,0.01110
 #################################
 
 # Fade windows during opacity changes.
-fading = true;
+#fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+#fade-delta = 4;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.05;
+#fade-in-step = 0.05;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
+#fade-out-step = 0.03;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
 # Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ ];
+#fade-exclude = [ ];
 
 #################################
 #
@@ -176,23 +176,23 @@ fade-exclude = [ ];
 #################################
 
 # Try to detect WM windows and mark them as active.
-mark-wmwin-focused = true;
+#mark-wmwin-focused = true;
 # Mark all non-WM but override-redirect windows active (e.g. menus).
-mark-ovredir-focused = true;
+#mark-ovredir-focused = true;
 # Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
 # Usually more reliable but depends on a EWMH-compliant WM.
-use-ewmh-active-win = true;
+#use-ewmh-active-win = true;
 # Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
-detect-rounded-corners = true;
+#detect-rounded-corners = true;
 
 # Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
 # This prevents opacity being ignored for some apps.
 # For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
-detect-client-opacity = true;
+#detect-client-opacity = true;
 
 # Specify refresh rate of the screen.
 # If not specified or 0, compton will try detecting this with X RandR extension.
-refresh-rate = 0;
+#refresh-rate = 0;
 
 # Set VSync method. VSync methods currently available:
 # none: No VSync
@@ -206,28 +206,28 @@ refresh-rate = 0;
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
-dbe = false;
+#dbe = false;
 # Painting on X Composite overlay window. Recommended.
 #paint-on-overlay = true;
 #
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
 # unless you wish to specify a lower refresh rate than the actual value.
-sw-opti = false;
+#sw-opti = false;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
 # paint-on-overlay may make the flickering less obvious.
-unredir-if-possible = true;
+#unredir-if-possible = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
+#focus-exclude = [ ];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
-detect-transient = true;
+#detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
-detect-client-leader = true;
+#detect-client-leader = true;
 
 #################################
 #
@@ -235,17 +235,21 @@ detect-client-leader = true;
 #
 #################################
 
-wintypes:
-{
-    tooltip =
-    {
+#wintypes:
+#{
+#    tooltip =
+#    {
         # fade: Fade the particular type of windows.
-        fade = true;
+#        fade = true;
         # shadow: Give those windows shadow
-        shadow = false;
+#        shadow = false;
         # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
+#        opacity = 0.85;
         # focus: Whether to always consider windows of this type focused.
-        focus = true;
-    };
-};
+#        focus = true;
+#    };
+#};
+
+#opacity-rule = [
+#    "80:class_g = 'Alacritty'",
+#];
