i3blocks (CPU load)

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -20,7 +20,7 @@ color=#C9E3DB
 [CPU]
 full_text= CPU:  0.00% @ +00.0°C 
 command=~/.config/i3blocks/cpu/cpu_info.sh
-interval=repeat
+interval=2
 color=#00B4EB
 
 [MEM]
