--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -1,12 +1,17 @@
-[WEATHER_SIGNALER]
-command=~/.config/i3blocks/weather/weather_signaler
-interval=once
+#[WEATHER_SIGNALER]
+#command=~/.config/i3blocks/weather/weather_signaler
+#interval=once
 
-[WEATHER]
-command=~/.config/i3blocks/weather/weather_info.sh
+#[WEATHER]
+#command=~/.config/i3blocks/weather/weather_info.sh
+#interval=300
+#color=#FEC925
+#signal=2
+
+[KERNEL]
+command=~/.config/i3blocks/kernel/kernel_version.sh
 interval=300
 color=#FEC925
-signal=2
 
 [DISK]
 command=df -h / | awk '/\//{ printf(" 💾 %4s/%s \n", $4, $2) }'
