--- a/.config/i3/config
+++ b/.config/i3/config
@@ -250,7 +250,7 @@ bindsym $mod+r mode "resize"
 bar {
   position top
   status_command i3blocks
-  tray_output DisplayPort-0
+  #tray_output DisplayPort-0
   colors {
     separator #AAAAAA
     background #222133
