--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,7 +90,7 @@ bindsym $mod+p exec --no-startup-id xfce4-screenshooter
 bindsym $mod+g exec --no-startup-id geany
 bindsym $mod+m exec --no-startup-id telegram
 bindsym $mod+z exec --no-startup-id signal
-bindsym $mod+u exec --no-startup-id uxterm
+bindsym $mod+u exec --no-startup-id lxrandr
 bindsym $mod+t exec --no-startup-id xterm
 bindsym $mod+i exec --no-startup-id lxappearance
 
