Dotfiles config update (2021-11-20)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -86,7 +86,7 @@ autorun = ws[1]:~/.config/spectrwm/startcompositor.sh
 autorun = ws[1]:xscreensaver
 
 # Clipboard (Diodon)
-autorun = ws[1]:diodon
+#autorun = ws[1]:diodon
 
 # Customize workspace layout at start
 # layout		= ws[1]:4:0:0:0:vertical
