Dotfiles config update (2021-11-20)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -18,8 +18,8 @@ color_focus           = rgb:bb/c5/ff
 color_focus_maximized = yellow
 color_unfocus         = rgb:88/88/88
 color_unfocus_maximized	= rgb:88/88/00
-region_padding	      = 6 
-tile_gap              = 6
+region_padding	      = 8
+tile_gap              = 8
 
 # Region containment
 # Distance window must be dragged/resized beyond the region edge before it is
@@ -33,7 +33,7 @@ tile_gap              = 6
 bar_action              = ~/.config/spectrwm/baraction.sh
 bar_action_expand       = 200
 bar_enabled             = 1
-bar_border_width        = 5
+bar_border_width        = 6
 bar_border[1]           = rgb:28/2a/36
 bar_border_unfocus[1]	= rgb:28/2a/36
 bar_color[1]            = rgb:28/2a/36, rgb:00/80/80
@@ -45,7 +45,9 @@ bar_font_color_selected	= black
 #bar_font                = Mononoki Nerd Font:size=9
 bar_font               = Noto Sans Font:size=9
 bar_justify             = center
-bar_format              =  +|L+1<+N:+I +S (+D) +W +|R+A+1< 
+#bar_format              =  +|L+1<+N:+I +S (+D) +W +|R+A+1< 
+#bar_format             = +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
+bar_format             = +N:+I +S +P <+D>+4< +8<+A+4<+V
 #bar_format             = +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
 workspace_indicator     = listcurrent,listactive,markcurrent,printnames
 bar_at_bottom           = 0
@@ -102,9 +104,9 @@ name      = ws[3]:chat
 name      = ws[4]:files
 name      = ws[5]:media
 name      = ws[6]:game
-name      = ws[7]:work
+name      = ws[7]:vm
 name      = ws[8]:dev
-name      = ws[9]:tools
+name      = ws[9]:text
 name      = ws[10]:all
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
@@ -253,6 +255,22 @@ bind[]      = MOD+Shift+q # Disable close session
 # program[screenshot_all]	= screenshot.sh full	# optional
 # program[screenshot_wind]	= screenshot.sh window	# optional
 # program[initscr]	= initscreen.sh			# optional
+
+## Volume Bindings
+program[volup]      = pactl set-sink-volume @DEFAULT_SINK@ +5%
+program[voldown]    = pactl set-sink-volume @DEFAULT_SINK@ -5%
+program[mute]       = pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind[volup]         = XF86_AudioRaiseVolume
+bind[voldown]       = XF86_AudioLowerVolume
+bind[mute]          = XF86_AudioMute
+
+## Brightmess Bindings
+program[brightup]   = light -A 10
+#program[brightup]   = xrandr --output HDMI1 --brightness 1.0
+program[brightdown] = light -U 10
+#program[brightdown] = xrandr --output HDMI1 --brightness 0.75
+bind[brightup]      = XF86_MonBrightnessUp
+bind[brightdown]    = XF86_MonBrightnessDown
 
 # EXAMPLE: Define 'firefox' action and bind to key.
 program[firefox]   = firefox
