Dotfiles config update (2021-11-20)

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,8 +30,8 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id connman-gtk --tray &
-#exec --no-startup-id nm-applet
+#exec --no-startup-id connman-gtk --tray &
+exec --no-startup-id nm-applet &
 
 # Applet for Audio
 exec --no-startup-id pnmixer -t &
