--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -44,11 +44,13 @@ bar_font_color_selected	= black
 #bar_font                = Mononoki Nerd Font:size=9, JoyPixels:size=9
 #bar_font                = Mononoki Nerd Font:size=9
 bar_font               = Noto Sans Font:size=9
-bar_justify             = center
-#bar_format              =  +|L+1<+N:+I +S (+D) +W +|R+A+1< 
-#bar_format             = +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
-bar_format             = +N:+I +S +P <+D>+4< +8<+A+4<+V
-#bar_format             = +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
+bar_justify             = center # Don't touch
+
+#bar_format              =  +|L+1<+N:+I +S (+D) +P +|R+A+1< # Bars on the sides
+#bar_format              =  +|L+1<+N:+I +S (+D) +W +|R+A+1< # Bars on the sides + window titles
+bar_format             = +N:+I +S +P <+D>+4< +8<+A+4<+V # Bar in the center
+#bar_format             = +N:+I +S <+D>+4< +8<+A+4<+V # Bar in the center (minimal)
+
 workspace_indicator     = listcurrent,listactive,markcurrent,printnames
 bar_at_bottom           = 0
 stack_enabled           = 1
@@ -250,6 +252,7 @@ bind[ws_prior]		= MOD+a
 # bind[]		= MOD+Shift+Return	# disable term
 # bind[]		= MOD+p			# disable menu
 bind[]      = MOD+Shift+q # Disable close session
+bind[]      = MOD+q # Disable restart spectrwm (Use Win+Shift+r)
 
 # Optional default programs that will only be validated if you override:
 # program[screenshot_all]	= screenshot.sh full	# optional
