Dotfiles config update (2021-11-21)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -48,7 +48,8 @@ bar_justify             = center # Don't touch
 
 #bar_format              =  +|L+1<+N:+I +S (+D) +P +|R+A+1< # Bars on the sides
 #bar_format              =  +|L+1<+N:+I +S (+D) +W +|R+A+1< # Bars on the sides + window titles
-bar_format             = +N:+I +S +P <+D>+4< +8<+A+4<+V # Bar in the center
+bar_format             = +N:+I +S (+D) +P +4< +8<+A+4<+V # Bar in the center
+#bar_format             = +N:+I +S (+D) +C +4< +8<+A+4<+V # Bar in the center (more simple)
 #bar_format             = +N:+I +S <+D>+4< +8<+A+4<+V # Bar in the center (minimal)
 
 workspace_indicator     = listcurrent,listactive,markcurrent,printnames
@@ -106,9 +107,9 @@ name      = ws[3]:chat
 name      = ws[4]:files
 name      = ws[5]:media
 name      = ws[6]:game
-name      = ws[7]:vm
+name      = ws[7]:mail
 name      = ws[8]:dev
-name      = ws[9]:text
+name      = ws[9]:vm
 name      = ws[10]:all
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
@@ -199,19 +200,19 @@ bind[rg_6]		= MOD+KP_Right
 bind[rg_7]		= MOD+KP_Home
 bind[rg_8]		= MOD+KP_Up
 bind[rg_9]		= MOD+KP_Prior
-bind[rg_next]		= MOD+period
-bind[rg_prev]		= MOD+comma
+bind[rg_next]   = MOD+period
+bind[rg_prev]   = MOD+comma
 #bind[screenshot_all]	= MOD+s
 bind[screenshot_wind]	= MOD+Shift+s
-bind[search_win]	= MOD+f
-bind[search_workspace]	= MOD+slash
-bind[stack_dec]		= MOD+Shift+period
-bind[stack_inc]		= MOD+Shift+comma
-bind[stack_reset]	= MOD+Shift+space
-# bind[swap_main]	= MOD+Return
-#bind[swap_next]	= MOD+Shift+j
-#bind[swap_prev]	= MOD+Shift+k
-#bind[uniconify]		= MOD+Shift+w
+bind[search_win]  = MOD+f
+bind[search_workspace]  = MOD+slash
+bind[stack_dec]   = MOD+Shift+period
+bind[stack_inc]   = MOD+Shift+comma
+bind[stack_reset] = MOD+Shift+space
+# bind[swap_main] = MOD+Return
+#bind[swap_next]  = MOD+Shift+j
+#bind[swap_prev]  = MOD+Shift+k
+#bind[uniconify]  = MOD+Shift+w
 bind[version]		= MOD+Shift+v
 bind[width_grow]	= MOD+equal
 bind[width_shrink]	= MOD+minus
