--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,7 +44,7 @@ exec --no-startup-id ~/.config/i3/startxrandr.sh &
 exec --no-startup-id "sleep 15 && picom &"
 
 # Configure wallpaper
-exec --no-startup-id "sleep 3 && nitrogen --set-centered ~/wallpapers/abstract.png"
+exec --no-startup-id "sleep 3 && nitrogen --set-scaled ~/wallpapers/abstract.png"
 
 # Configure xscreensaver
 exec --no-startup-id "sleep 5 && xscreensaver &"
