--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -326,6 +326,20 @@ bind[nitrogen]     = MOD+z
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
+quirk[Nitrogen:nitrogen]  = FLOAT
+quirk[Lxrandr:lxrandr]  = FLOAT
+quirk[Connman-gtk:connman-gtk]  = FLOAT
+quirk[Nm-connection-editor:nm-connection-editor]  = FLOAT
+quirk[Pavucontrol:pavucontrol]  = FLOAT
+quirk[Lxappearance:lxappearance]  = FLOAT
+quirk[vlc:vlc]  = FLOAT
+quirk[mpv:gl]  = FLOAT
+quirk[Ristretto:ristretto]  = FLOAT
+quirk[Gimp:gimp]  = FLOAT + ANYWHERE
+quirk[Gimp-2.10:gimp-2.10]  = FLOAT + ANYWHERE
+quirk[Mozilla VPN:mozillavpn]  = FLOAT
+quirk[VirtualBoxVM:VirtualBoxVM]  = FLOAT + ANYWHERE
+quirk[VirtualBox Machine:VirtualBox Machine]  = FLOAT + ANYWHERE
 # quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
 # quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
 # quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
