Dotfiles config update (2021-11-25)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -334,6 +334,8 @@ quirk[Pavucontrol:pavucontrol]  = FLOAT
 quirk[Lxappearance:lxappearance]  = FLOAT
 quirk[vlc:vlc]  = FLOAT
 quirk[mpv:gl]  = FLOAT
+quirk[Engrampa:engrampa]  = FLOAT
+quirk[Xarchiver:xarchiver]  = FLOAT
 quirk[Ristretto:ristretto]  = FLOAT
 quirk[Gimp:gimp]  = FLOAT + ANYWHERE
 quirk[Gimp-2.10:gimp-2.10]  = FLOAT + ANYWHERE
