Dotfiles config update (2021-11-26)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -78,9 +78,6 @@ urgent_enabled	    	= 1
 # autorun		= ws[2]:xombrero http://www.openbsd.org
 autorun = ws[1]:~/.config/spectrwm/startwallpaper.sh
 
-# Applet for audio
-autorun = ws[1]:pnmixer -t
-
 # Configure screens and resolution
 autorun = ws[1]:~/.config/spectrwm/startxrandr.sh
 
@@ -90,8 +87,8 @@ autorun = ws[1]:~/.config/spectrwm/startcompositor.sh
 # Start xscreensaver
 autorun = ws[1]:xscreensaver
 
-# Clipboard (Diodon)
-#autorun = ws[1]:diodon
+# Autostart script
+autorun = ws[1]:~/.config/spectrwm/autostart.sh
 
 # Customize workspace layout at start
 # layout		= ws[1]:4:0:0:0:vertical
@@ -323,6 +320,9 @@ bind[xfce4-screenshooter]     = MOD+s
 
 program[nitrogen]  = nitrogen
 bind[nitrogen]     = MOD+z
+
+program[showtray] = ~/.config/spectrwm/showtray.sh
+bind[showtray]    = MOD+Shift+t
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
