Dotfiles config update (2021-11-26)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -90,6 +90,9 @@ autorun = ws[1]:xscreensaver
 # Autostart script
 autorun = ws[1]:~/.config/spectrwm/autostart.sh
 
+# Autostart tray on Workspace 7
+autorun = ws[7]:~/.config/spectrwm/showtray.sh
+
 # Customize workspace layout at start
 # layout		= ws[1]:4:0:0:0:vertical
 # layout		= ws[2]:0:0:0:0:horizontal
