--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,8 +51,8 @@ exec --no-startup-id "sleep 5 && xscreensaver &"
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -60,7 +60,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # New windows without borders
-new_window 1pixel
+#new_window 1pixel
+new_window pixel 3
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
@@ -78,22 +79,23 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
-# Run rofi options
-bindsym $mod+x exec --no-startup-id rofi -show run
-bindsym $mod+c exec --no-startup-id rofi -show window
-bindsym $mod+o exec --no-startup-id "rofi -modi drun,run -show drun"
+# NetworkManager
+#bindsym $mod+c exec --no-startup-id connman-gtk --no-icon
+bindsym $mod+c exec --no-startup-id nm-connection-editor
 
 # Run applications
+bindsym $mod+o exec --no-startup-id "rofi -modi drun,run -show drun"
+bindsym $mod+q exec --no-startup-id rofi -show window
+bindsym $mod+x exec --no-startup-id lxrandr
 bindsym $mod+b exec --no-startup-id firefox
 bindsym $mod+n exec --no-startup-id pcmanfm
-bindsym $mod+p exec --no-startup-id xfce4-screenshooter
+bindsym $mod+p exec --no-startup-id rofi -show run
 bindsym $mod+g exec --no-startup-id geany
 bindsym $mod+m exec --no-startup-id telegram
-bindsym $mod+z exec --no-startup-id signal
-bindsym $mod+u exec --no-startup-id lxrandr
-bindsym $mod+t exec --no-startup-id xterm
+bindsym $mod+z exec --no-startup-id nitrogen
+bindsym $mod+u exec --no-startup-id xterm
+bindsym $mod+t exec --no-startup-id rofi-theme-selector
 bindsym $mod+i exec --no-startup-id lxappearance
-
 
 # change focus
 bindsym $mod+j focus left
@@ -176,40 +178,72 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+#set $ws1 "1"
+#set $ws2 "2"
+#set $ws3 "3"
+#set $ws4 "4"
+#set $ws5 "5"
+#set $ws6 "6"
+#set $ws7 "7"
+#set $ws8 "8"
+#set $ws9 "9"
+#set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+1 workspace number 1 term
+bindsym $mod+2 workspace number 2 www
+bindsym $mod+3 workspace number 3 chat
+bindsym $mod+4 workspace number 4 files
+bindsym $mod+5 workspace number 5 media
+bindsym $mod+6 workspace number 6 game
+bindsym $mod+7 workspace number 7 mail
+bindsym $mod+8 workspace number 8 dev
+bindsym $mod+9 workspace number 9 vm
+bindsym $mod+0 workspace number 10 all
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+1 move container to workspace number 1 term
+bindsym $mod+Shift+2 move container to workspace number 2 www
+bindsym $mod+Shift+3 move container to workspace number 3 chat
+bindsym $mod+Shift+4 move container to workspace number 4 files
+bindsym $mod+Shift+5 move container to workspace number 5 media
+bindsym $mod+Shift+6 move container to workspace number 6 game
+bindsym $mod+Shift+7 move container to workspace number 7 mail
+bindsym $mod+Shift+8 move container to workspace number 8 dev
+bindsym $mod+Shift+9 move container to workspace number 9 vm
+bindsym $mod+Shift+0 move container to workspace number 10 all
+
+# force a window on a named workspace
+assign [class="Firefox"] 2 www
+assign [class="mpv"] 5 media
+assign [class="vlc"] 5 media
+assign [class="Ristretto"] 5 media
+assign [class="Gimp"] 5 media
+assign [class="Gimp-2.10"] 5 media
+assign [class="Mozilla VPN"] 2 www
+assign [class="XTerm"] 1 term
+assign [class="VirtualBoxVM"] 9 vm
+assign [class="VirtualBox Machine"] 9 vm
+assign [class="Steam"] 6 game
+assign [class="Telegram"] 3 chat
+assign [class="Signal"] 3 chat
+assign [class="Pcmanfm"] 4 files
+assign [class="Mousepad"] 8 dev
+assign [class="Geany"] 8 dev
+
+# force floatin windows
+for_window [class="Pavucontrol" instance="pavucontrol"] floating enable
+for_window [class="Nitrogen" instance="nitrogen"] floating enable
+for_window [class="Lxrandr" instance="lxrandr"] floating enable
+for_window [class="Connman-gtk" instance="connman-gtk"] floating enable
+for_window [class="Nm-connection-editor" instance="nm-connection-editor"] floating enable
+for_window [class="vlc" instance="vlc"] floating enable
+for_window [class="mpv" instance="gl"] floating enable
+for_window [class="Engrampa" instance="engrampa"] floating enable
+for_window [class="Xarchiver" instance="xarchiver"] floating enable
+for_window [class="Ristretto" instance="ristretto"] floating enable
+for_window [class="Mozilla VPN" instance="mozillavpn"] floating enable
+for_window [class="Lxappearance" instance="lxappearance"] floating enable
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
