--- a/.config/i3/config
+++ b/.config/i3/config
@@ -190,46 +190,46 @@ bindsym $mod+a focus parent
 #set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace number 1 term
-bindsym $mod+2 workspace number 2 www
-bindsym $mod+3 workspace number 3 chat
-bindsym $mod+4 workspace number 4 files
-bindsym $mod+5 workspace number 5 media
-bindsym $mod+6 workspace number 6 game
-bindsym $mod+7 workspace number 7 mail
-bindsym $mod+8 workspace number 8 dev
-bindsym $mod+9 workspace number 9 vm
-bindsym $mod+0 workspace number 10 all
+bindsym $mod+1 workspace number 1:term
+bindsym $mod+2 workspace number 2:www
+bindsym $mod+3 workspace number 3:chat
+bindsym $mod+4 workspace number 4:files
+bindsym $mod+5 workspace number 5:media
+bindsym $mod+6 workspace number 6:game
+bindsym $mod+7 workspace number 7:mail
+bindsym $mod+8 workspace number 8:dev
+bindsym $mod+9 workspace number 9:vm
+bindsym $mod+0 workspace number 10:all
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1 term
-bindsym $mod+Shift+2 move container to workspace number 2 www
-bindsym $mod+Shift+3 move container to workspace number 3 chat
-bindsym $mod+Shift+4 move container to workspace number 4 files
-bindsym $mod+Shift+5 move container to workspace number 5 media
-bindsym $mod+Shift+6 move container to workspace number 6 game
-bindsym $mod+Shift+7 move container to workspace number 7 mail
-bindsym $mod+Shift+8 move container to workspace number 8 dev
-bindsym $mod+Shift+9 move container to workspace number 9 vm
-bindsym $mod+Shift+0 move container to workspace number 10 all
+bindsym $mod+Shift+1 move container to workspace number 1:term
+bindsym $mod+Shift+2 move container to workspace number 2:www
+bindsym $mod+Shift+3 move container to workspace number 3:chat
+bindsym $mod+Shift+4 move container to workspace number 4:files
+bindsym $mod+Shift+5 move container to workspace number 5:media
+bindsym $mod+Shift+6 move container to workspace number 6:game
+bindsym $mod+Shift+7 move container to workspace number 7:mail
+bindsym $mod+Shift+8 move container to workspace number 8:dev
+bindsym $mod+Shift+9 move container to workspace number 9:vm
+bindsym $mod+Shift+0 move container to workspace number 10:all
 
 # force a window on a named workspace
-assign [class="Firefox"] 2 www
-assign [class="mpv"] 5 media
-assign [class="vlc"] 5 media
-assign [class="Ristretto"] 5 media
-assign [class="Gimp"] 5 media
-assign [class="Gimp-2.10"] 5 media
-assign [class="Mozilla VPN"] 2 www
-assign [class="XTerm"] 1 term
-assign [class="VirtualBoxVM"] 9 vm
-assign [class="VirtualBox Machine"] 9 vm
-assign [class="Steam"] 6 game
-assign [class="Telegram"] 3 chat
-assign [class="Signal"] 3 chat
-assign [class="Pcmanfm"] 4 files
-assign [class="Mousepad"] 8 dev
-assign [class="Geany"] 8 dev
+assign [class="Firefox"] 2:www
+assign [class="mpv"] 5:media
+assign [class="vlc"] 5:media
+assign [class="Ristretto"] 5:media
+assign [class="Gimp"] 5:media
+assign [class="Gimp-2.10"] 5:media
+assign [class="Mozilla VPN"] 2:www
+assign [class="XTerm"] 1:term
+assign [class="VirtualBoxVM"] 9:vm
+assign [class="VirtualBox Machine"] 9:vm
+assign [class="Steam"] 6:game
+assign [class="Telegram"] 3:chat
+assign [class="Signal"] 3:chat
+assign [class="Pcmanfm"] 4:files
+assign [class="Mousepad"] 8:dev
+assign [class="Geany"] 8:dev
 
 # force floatin windows
 for_window [class="Pavucontrol" instance="pavucontrol"] floating enable
@@ -283,6 +283,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
   position top
+  #status_command i3status
   status_command i3blocks
   #tray_output DisplayPort-0
   colors {
