Dotfiles config update (2021-12-06)

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -88,7 +88,7 @@ autorun = ws[1]:~/.config/spectrwm/startcompositor.sh
 autorun = ws[1]:xscreensaver
 
 # Autostart script
-autorun = ws[1]:~/.config/spectrwm/autostart.sh
+#autorun = ws[1]:~/.config/spectrwm/autostart.sh
 
 # Autostart tray on Workspace 7
 autorun = ws[7]:~/.config/spectrwm/showtray.sh
