--- a/.config/i3/config
+++ b/.config/i3/config
@@ -283,6 +283,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
   position top
+  #i3bar_command $HOME/.config/polybar/launch.sh
   status_command i3status
   #status_command i3blocks
   #tray_output DisplayPort-0
