--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -32,14 +32,14 @@ light-green = ${xrdb: color6}
 
 padding     = 2
 
-[bar/example]
+[bar/mainbar-i3]
 monitor = ${env:MONITOR:}
 ;monitor = ${env:MONITOR:HDMI-1}
 ;monitor = ${env:MONITOR:DisplayPort-0}
 ;monitor = ${env:MONITOR:DisplayPort-1}
 width = 100%
 height = 26
-;override-redirect = true
+override-redirect = true
 ;offset-x = 25%
 ;offset-y = 0%
 radius = 0.0
@@ -68,7 +68,7 @@ font-0 = fixed:pixelsize=9:weight=bold:antialias=true
 font-1 = unifont:fontformat=truetype:size=8:antialias=false
 font-2 = Noto Sans Font:pixelsize=10
 
-modules-left = i3 
+modules-left = i3
 ; modules-center = calendar date 
 modules-right = kernel cpu meminfo diskinfo pulseaudio wlan eth0 date
 tray-position = right
@@ -88,6 +88,115 @@ scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[bar/mainbar-spectrwm]
+monitor = ${env:MONITOR}
+;monitor-fallback = HDMI1
+width = 100%
+height = 26
+;offset-x = 1%
+;offset-y = 1%
+radius = 0.0
+fixed-center = true
+;bottom = false
+;separator = |
+
+;background = ${glob.background}
+background = #222133
+foreground = #ADBAC7
+underline = #664477
+
+line-size = 3
+line-color = #f004477
+
+;wm-restack = bspwm
+override-redirect = true
+
+; Enable support for inter-process messaging
+; See the Messaging wiki page for more details.
+;enable-ipc = true
+
+border-size = 0
+;border-color = #664477
+;border-color = #00000000
+;border-color = ${glob.background}
+
+padding-left = 0
+padding-right = 0
+
+module-margin-left = 1
+module-margin-right = 0
+
+;https://github.com/jaagr/polybar/wiki/Fonts
+font-0 = "Noto Sans:size=10;0"
+font-1 = "FontAwesome:size=10;0"
+font-2 = "Noto Sans:size=10;0"
+font-3 = "Noto Sans Mono:size=10;0"
+
+;modules-left = ewmh xwindow
+modules-left = ewmh
+;modules-center = kernel
+;modules-right = pavolume memory2 cpu2 date
+modules-right = kernel cpu meminfo diskinfo pulseaudio date
+
+;tray-detached = false
+;tray-offset-x = 0
+;tray-offset-y = 0
+;tray-padding = 2
+;tray-maxsize = 20
+;tray-scale = 1.0
+tray-position = right
+;tray-margin = 0
+tray-background = #222133 
+
+scroll-up = spectrwm-desknext
+scroll-down = spectrwm-deskprev
+
+[module/xwindow]
+;https://github.com/jaagr/polybar/wiki/Module:-xwindow
+type = internal/xwindow
+
+; Available tokens:
+;   %title%
+; Default: %title%
+label = %title%
+label-maxlen = 50
+
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+
+[module/ewmh]
+type = internal/xworkspaces
+pin-workspaces = false
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+
+#icon-5 = 6;
+format = <label-state>
+label-monitor = %name%
+
+label-active = %name%
+label-active-foreground = ${colors.foreground}
+label-active-background = ${colors.background}
+label-active-underline= #6790eb
+label-active-padding = 2
+
+label-occupied = %name%
+label-occupied-background = ${colors.background}
+label-occupied-padding = 2
+
+label-urgent = %name%
+label-urgent-foreground = ${colors.foreground}
+label-urgent-background = ${colors.alert}
+label-urgent-underline = ${colors.alert}
+label-urgent-padding = 2
+
+label-empty = %name%
+label-empty-foreground = ${colors.foreground}
+label-empty-padding = 2
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
 
 [module/kernel]
 format-foreground = #51A6E3
@@ -115,12 +224,6 @@ format-foreground = #CADD8A
 type = custom/script
 exec = ~/.config/polybar/disk_info.sh
 format-foreground = #C14F3F
-
-[module/xwindow]
-type = internal/xwindow
-format = <label>
-label = %title%
-label-maxlen =50
 
 [module/i3]
 type = internal/i3
