--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -64,9 +64,10 @@ padding-right = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = fixed:pixelsize=9:weight=bold:antialias=true
-font-1 = unifont:fontformat=truetype:size=8:antialias=false
-font-2 = Noto Sans Font:pixelsize=10
+font-0 = "Noto Sans:size=10;0"
+font-1 = "FontAwesome:size=10;0"
+font-2 = "Noto Sans:size=10;0"
+font-3 = "Noto Sans Mono:size=10;0"
 
 modules-left = i3
 ; modules-center = calendar date 
