--- a/.config/i3/config
+++ b/.config/i3/config
@@ -291,13 +291,13 @@ bar {
     separator #AAAAAA
     background #222133
     statusline #FFFFFF
-    focused_workspace #664477 #664477 #cccccc #282828
-    active_workspace #DCCD69 #DCCD69 #181715 #928374
-    inactive_workspace #222133 #222133 #AAAAAA #928374
-    urgent_workspace #CE4045 #CE4045 #FFFFFF #ebdbb2
+    focused_workspace #664477 #664477 #cccccc #5b399e
+    active_workspace #5b399e #5b399e #cccccc #5b399e
+    inactive_workspace #222133 #222133 #AAAAAA #002b36
+    urgent_workspace #CE4045 #CE4045 #FFFFFF #5b399e
   }
 }
-client.focused #664477 #664477 #cccccc #e7d8b1
-client.focused_inactive #e7d8b1 #e7d8b1 #181715 #A074C4
+client.focused #664477 #664477 #cccccc #5b399e
+client.focused_inactive #5b399e #5b399e #cccccc #A074C4
 client.unfocused #222133 #222133 #AAAAAA #A074C4
-client.urgent #CE4045 #CE4045 #e7d8b1 #DCCD69
+client.urgent #CE4045 #CE4045 #5b399e #DCCD69
