--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -143,12 +143,13 @@
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
+        "format": "{volume}% {icon}",
+        //"format": "{volume}% {icon} {format_source}",
+        //"format-bluetooth": "{volume}% {icon} {format_source}",
+        //"format-bluetooth-muted": " {icon} {format_source}",
+        //"format-muted": " {format_source}",
+        //"format-source": "{volume}% ",
+        //"format-source-muted": "",
         "format-icons": {
             "headphone": "",
             "hands-free": "",
