Dotfiles config update (2021-12-13)

--- a/.config/spectrwm/spectrwm-main.conf
+++ b/.config/spectrwm/spectrwm-main.conf
@@ -84,8 +84,8 @@ autorun = ws[1]:~/.config/spectrwm/startxrandr.sh
 # Load compton of picom
 autorun = ws[1]:~/.config/spectrwm/startcompositor.sh
 
-# Start xscreensaver
-autorun = ws[1]:xscreensaver
+# Start screensaver
+autorun = ws[1]:~/.config/spectrwm/startscreensaver.sh
 
 # Autostart script
 #autorun = ws[1]:~/.config/spectrwm/autostart.sh
