Dotfiles config update (2022-04-07)

--- a/.config/spectrwm/spectrwm-main.conf
+++ b/.config/spectrwm/spectrwm-main.conf
@@ -122,7 +122,7 @@ modkey = Mod4
 
 # Validated default programs:
 # program[lock]		= xlock
- program[term]		= alacritty
+ program[term]		= kitty
  program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
  #program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
  #program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
@@ -288,8 +288,8 @@ bind[connection]      = MOD+c
 program[pavucontrol]  = pavucontrol
 bind[pavucontrol]     = MOD+v
 
-program[alacritty]  = alacritty
-bind[alacritty]	    = MOD+Return
+program[kitty]  = kitty
+bind[kitty]	    = MOD+Return
 
 program[terminal]  = xterm
 bind[terminal]	   = MOD+u
