--- a/.config/sway/config
+++ b/.config/sway/config
@@ -63,7 +63,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec xterm
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -89,7 +89,7 @@ bindsym $mod+n exec --no-startup-id pcmanfm
 bindsym $mod+p exec --no-startup-id wofi --show run
 bindsym $mod+g exec --no-startup-id geany
 bindsym $mod+m exec --no-startup-id telegram
-bindsym $mod+z exec --no-startup-id alacritty -e wf-recorder
+bindsym $mod+z exec --no-startup-id kitty -e wf-recorder
 #bindsym $mod+u exec --no-startup-id xterm
 bindsym $mod+u exec --no-startup-id ~/.config/sway/xterm-wayland
 bindsym $mod+t exec --no-startup-id ~/.config/sway/wayland-screenshot
