--- a/.config/i3/config
+++ b/.config/i3/config
@@ -66,7 +66,7 @@ new_window pixel 2
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec xterm
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
