--- a/.config/kitty/kitty-themes/OneDark.conf
+++ b/.config/kitty/kitty-themes/OneDark.conf
@@ -1,4 +1,4 @@
-# One Dark by Giuseppe Cesarano, https://github.com/GiuseppeCesarano
+# One Dark by q3aql, https://github.com/q3aql
 # This work is licensed under the terms of the GPL-2.0 license.
 # For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
 
@@ -10,7 +10,7 @@ color1 #e06c75
 color2 #98c379
 color3 #d19a66
 color4 #61afef
-color5 #e06c75
+color5 #c678dd
 color6 #56b6c2
 color7 #979eab
 color8 #393e48
