--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,5 +6,9 @@ italic_font      auto
 bold_italic_font auto
 font_size 10.0
 
+#: Cursor
+cursor_shape beam
+cursor_beam_thickness 1.8
+
 #: Load default theme
 include ./theme.conf
