--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -30,7 +30,7 @@ light-blue  = ${xrdb: color4}
 light-pink  = ${xrdb: color5}
 light-green = ${xrdb: color6}
 
-padding     = 2
+padding = 1
 
 [bar/mainbar-i3]
 monitor = ${env:MONITOR:}
@@ -51,7 +51,7 @@ background = #2b303b
 foreground = #ADBAC7
 underline = #664477
 
-line-size = 2
+line-size = 0
 ;line-color = #f004477
 line-color = #9fa8af
 
@@ -66,16 +66,17 @@ padding-right = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = "Noto Sans:size=10;0"
+font-0 = "UbuntuMono Nerd Font:size=11;0"
 font-1 = "FontAwesome:size=10;0"
 font-2 = "Noto Sans:size=10;0"
 font-3 = "Noto Sans Mono:size=10;0"
 
 modules-left = i3
 ; modules-center = calendar date 
-modules-right = kernel cpu meminfo diskinfo pulseaudio wlan eth0 date
+; modules-right = checkupdate kernel cpu meminfo diskinfo pulseaudio wlan eth0 date
+modules-right = checkupdate ikernel icpu imeminfo getvolume currentdate
 tray-position = right
-;tray-margin = 0
+tray-margin = 0
 ;tray-background = #222133 
 tray-background = #2b303b 
 
@@ -132,7 +133,7 @@ module-margin-left = 1
 module-margin-right = 0
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "Noto Sans:size=10;0"
+font-0 = "UbuntuMono Nerd Font:size=11;0"
 font-1 = "FontAwesome:size=10;0"
 font-2 = "Noto Sans:size=10;0"
 font-3 = "Noto Sans Mono:size=10;0"
@@ -141,12 +142,13 @@ font-3 = "Noto Sans Mono:size=10;0"
 modules-left = ewmh
 ;modules-center = kernel
 ;modules-right = pavolume memory2 cpu2 date
-modules-right = kernel cpu meminfo diskinfo pulseaudio date
+; modules-right = kernel cpu meminfo diskinfo pulseaudio date
+modules-right = checkupdate ikernelnum icpu imeminfo getvolume currentdate
 
 ;tray-detached = false
 ;tray-offset-x = 0
 ;tray-offset-y = 0
-;tray-padding = 2
+tray-padding = 0
 ;tray-maxsize = 20
 ;tray-scale = 1.0
 tray-position = right
@@ -177,29 +179,29 @@ enable-scroll = true
 reverse-scroll = true
 
 #icon-5 = 6;
-format = <label-state>
-label-monitor = %name%
+;format = <label-state>
+;label-monitor = %name%
 
-label-active = %name%
+label-active = " %name% "
 label-active-foreground = ${colors.foreground}
 ;label-active-background = ${colors.background}
 label-active-background = #42516d
 label-active-underline= #dbdbdb
-label-active-padding = 2
+label-active-padding = 0
 
-label-occupied = %name%
+label-occupied = " %name% "
 label-occupied-background = ${colors.background}
-label-occupied-padding = 2
+label-occupied-padding = 0
 
-label-urgent = %name%
+label-urgent = " %name% "
 label-urgent-foreground = ${colors.foreground}
 label-urgent-background = ${colors.alert}
 label-urgent-underline = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 0
 
-label-empty = %name%
+label-empty = " %name% "
 label-empty-foreground = ${colors.foreground}
-label-empty-padding = 2
+label-empty-padding = 0
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
@@ -207,6 +209,18 @@ format-background = ${colors.background}
 format-foreground = #51A6E3
 type = custom/script
 exec = ~/.config/polybar/scripts/kernel_version.sh
+interval = 10
+
+[module/ikernel]
+format-foreground = #51A6E3
+type = custom/script
+exec = ~/.config/polybar/iscripts/kernel_version.sh
+interval = 10
+
+[module/ikernelnum]
+format-foreground = #51A6E3
+type = custom/script
+exec = ~/.config/polybar/iscripts/kernel_version_num.sh
 interval = 10
 
 [module/cpu]
@@ -220,6 +234,28 @@ type = custom/script
 exec = ~/.config/polybar/scripts/cpu_info.sh
 interval = 0.5
 
+[module/icpu]
+;type = internal/cpu
+format-foreground = #B63CEC
+;format = <label>
+;label = CPU %percentage%%
+; Seconds to sleep between updates
+; Default: 1
+type = custom/script
+exec = ~/.config/polybar/iscripts/cpu_info.sh
+interval = 0.5
+
+[module/checkupdate]
+type = custom/script
+interval = 1800
+exec = ~/.config/polybar/iscripts/checkUpdates.sh
+format-foreground = #CADD8A
+
+[module/imeminfo]
+type = custom/script
+exec = ~/.config/polybar/iscripts/mem_info.sh
+format-foreground = #CADD8A
+
 [module/meminfo]
 type = custom/script
 exec = ~/.config/polybar/scripts/mem_info.sh
@@ -230,6 +266,18 @@ type = custom/script
 exec = ~/.config/polybar/scripts/disk_info.sh
 format-foreground = #C14F3F
 
+[module/currentdate]
+type = custom/script
+interval = 10
+exec = ~/.config/polybar/iscripts/current_date.sh
+format-foreground = #C14F3F
+
+[module/getvolume]
+type = custom/script
+interval = 2
+exec = ~/.config/polybar/iscripts/get_volume.sh
+format-foreground = #DDAA33
+
 [module/i3]
 type = internal/i3
 ;format = <label-state> <label-mode>
@@ -238,34 +286,34 @@ type = internal/i3
 strip-wsnumbers = true
 
 ; Only show workspaces on the same output as the bar
- pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = ${glob.padding}
 label-mode-foreground = #664477
 label-mode-background = ${glob.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %name%
+label-focused = " %name% "
 label-focused-foreground = ${colors.foreground}
 ;label-focused-background = ${colors.background}
 label-focused-background = #42516d
 label-focused-underline = #dbdbdb
-label-focused-padding = 1
+label-focused-padding = 0
 
 ; unfocused = Inactive workspace on any monitor
-;label-unfocused = %name%
-label-unfocused-padding = 1
+label-unfocused = " %name% "
+label-unfocused-padding = 0
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %name%
+label-visible = " %name% "
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = 1
+label-visible-padding = 0
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %name%
+label-urgent = " %name% "
 label-urgent-foreground = ${glob.red}
-label-urgent-padding = 1
+label-urgent-padding = 0
 
 ; Separator in between workspaces
 ; label-separator = |
