--- a/.config/sway/config
+++ b/.config/sway/config
@@ -46,6 +46,9 @@ exec --no-startup-id ~/.config/sway/startwlrscreensaver.sh
 # Clipboard (Diodon)
 exec --no-startup-id diodon &
 
+# Load Conky
+#exec --no-startup-id sleep 10 && conky -c ~/.config/conky/conkyrc_sway &
+
 # Use pactl to adjust volume in PulseAudio.
 #set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% #&& $refresh_i3status
