--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -345,6 +345,7 @@ quirk[Gimp-2.10:gimp-2.10]  = FLOAT + ANYWHERE
 quirk[Mozilla VPN:mozillavpn]  = FLOAT
 quirk[VirtualBoxVM:VirtualBoxVM]  = FLOAT + ANYWHERE
 quirk[VirtualBox Machine:VirtualBox Machine]  = FLOAT + ANYWHERE
+quirk[Conky:Conky]  = FLOAT
 # quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
 # quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
 # quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
